--- a/Program 3/table.css
+++ b/Program 3/table.css
@@ -1,54 +1,168 @@
-html,body
+*
 {
     margin:0;
-    box-sizing: border-box;
+    padding: 0;
 }
-header   
+.header
 {
-background:linear-gradient(45deg,darkcyan,white);
-color: white;
-text-align: center;
-width: 100%;
-display: block;
-padding: 20px;
+    background-image: linear-gradient(darkcyan,rgb(4, 28, 65));
+    color: white;
+    text-align: center;
+    width: 100%;
+    display: block;
 }
-table,tr, th, td{
-border: 1px solid black;
-border-collapse: collapse;
-padding: 32px;
-text-align: center;
-
-
-}
-.table-design{
-margin-left: auto;
-margin-right:auto;
-margin-top: auto;
-padding: 50px;
-}
-table#table-design th
+nav
 {
-vertical-align: middle;
+    display:flex ;
+    padding: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+nav img
+{
+    width: 100px;
+    position: relative;
+    left: 100px;
+}
+div.nav_links
+{
+    flex: 1;
+    text-align:center ;
 
 }
-tr th:nth-child(7)
-{
-writing-mode:vertical-lr ;
+div.nav_links h1{
+    font-size: 36px;
 }
 
-tr >th
-{
-background:linear-gradient(rgb(167, 146, 146),rgb(163, 108, 108));
+div.nav_links h3{
+    font-size: 24px;
 }
 
-td
+div.nav_links p{
+    font-size: 20px;
+}
+
+.table-design
 {
-    background-color: rgb(155, 155, 155);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f5f5f5;
+    /* background-image: linear-gradient(rgb(187, 187, 187),rgb(122, 87, 87)); */
     
-}
-div
-{
-    padding: 40px;
-    
 
+}
+.content-table,th,td
+{
+   border-collapse:collapse ;
+}
+.content-table
+{
+    border-collapse: collapse;
+    margin:20px;
+    min-width: 50%;
+    font-size: 100%;
+
+
+}
+.content-table .table-head
+{
+    background-color: #5b5b5b;
+    color: white;
+    text-align: left;
+   
+
+}
+.content-table th, .content-table td
+{
+    padding: 15px 18px;
+    text-align: center;
+}
+.content-table tr
+{
+    border-bottom: 2px solid #ddd;
+
+}
+.content-table tr:nth-of-type(even)
+{
+    background: color #cc2323; ;
+}
+.content-table tr:last-of-type(even)
+{
+    border-bottom: 2px solid #5b5b5b;
+}
+.table-data:hover
+{
+    background-color: #f5f5f5;
+    font-weight: 900;
+    color: deeppink;
+    transform: scale(1.02);
+    box-shadow: 2px 2px 12px rgba(0,0,0),2px 2px 12px rgba(0,0,0);
+}
+.box
+{
+    width: 300px;
+    border-bottom: 20px solid #5b5b5b;
+    border-bottom-left-radius: 10px ;
+    border-bottom-right-radius: 10px ;
+    margin: 20px;
+}
+.box h2
+{
+    color: #f5f5f5;
+    background: #5b5b5b; ;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: 700;
+    border-bottom-right-radius: 10px ;
+    border-bottom-left-radius: 10px ;
+
+}
+.box ul
+{
+    position: relative;
+    background-color: #ddd;
+}
+.box ul li
+{
+    list-style-type: none;
+    padding: 10px;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 5px 25px rgba(0,0,0,0);
+    transition: transform 0.5s;
+
+}
+.box ul li:hover
+{
+    transform: scale(1.1);
+    z-index: 100;
+    background: #5b5b5b;
+    box-shadow: 0 5px 25px rgba(0,0,0,0);
+    color: white;
+    opacity: 1;
+    border-radius: 10;
+}
+.box ul li span
+{
+    width: 20px;
+    height: 20px;
+    text-align:center ;
+    line-height: 20px;
+    background: #5b5b5b;
+    display: inline-block;
+    border-radius: 100%;
+    margin-right:10px ;
+    font-size: 10px;
+    font-weight: 600;
+    transform: translateY(-2px);
+}
+.box ul li:hover span
+{
+    background:transparent;
+
+}
+.box ul li
+{
+    opacity: 0.1;
 }
